# quick-shutdown

./: .gitignore  COPYING  README.md  com.github.saidbakr.quick-shutdown.yml  meson.build
.flatpak-builder/cache/: summary
.flatpak-builder/cache/refs/heads/app/com.github.saidbakr.quick-shutdown/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.saidbakr.quick_shutdown.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.github.saidbakr.quick-shutdown.yml/: build-quick-shutdown  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-com.github.saidbakr.quick-shutdown.yml
data/: com.github.saidbakr.quick-shutdown.desktop  quick-shutdown.gresource.xml
debian/: changelog.dch  control  copyright
src/: Application  Application.vala
src/resources/: mycss.css
